# AudioWebSocketClient

./: .gitignore  CMakeLists.txt  README.md  index.html
scripts/: parser_ya-music.py  parser_yt-dlp.py
src/: audioManager.cpp  audioManager.h  audioOrder.cpp  audioOrder.h  clientManager.cpp  clientManager.h  common.cpp  common.h  main.cpp  server.cpp  server.h  signalHandler.cpp  signalHandler.h  webSocketServer.cpp  webSocketServer.h
src/.backup/: server.cpp  server.h
